--- a/practice.html
+++ b/practice.html
@@ -5,20 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express</title>
     <link href="practice1.css" rel="stylesheet">
-    <style>
-          .head{
-        text-align: center;
-       }
-       .head h3{
-        font-size: 23px;
-        color:orangered;
-        
-       }
-       .head h2{
-color:black;
-font-size: 35px;
-       }
-    </style>
+   
 </head>
 <body>
     <nav class="home">
@@ -28,9 +15,9 @@ font-size: 35px;
         <div >
             <a href=""> Home</a>
             <a href="">Gallery</a>
-            <a href="">Service</a>
-             <a href="">About us</a>
-             <a href="">Contact us</a>     
+            <a href="#services">Service</a>
+             <a href="#chef">About us</a>
+             <a href="#contact">Contact us</a>     
         </div>
         <div>
 <p class="sub">More Then Faster</p></div>
@@ -50,8 +37,48 @@ font-size: 35px;
         <h2 >Your Favourite Food <br>
             Delivery Patner</h2>
     </div>
-    <div>
-        
+    <div class="service" id="services">
+       <div class="mybox">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfAa71MJgr8y6MG8be2nQmm_wMmdoCT3baCQ&usqp=CAU" width="120px">
+        <p>Securely pack items in sturdy boxes with ample padding to ensure safe delivery, minimizing risk of damage during transit</p>
+     </div>
+     <div class="mybox">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaeeWFoipHVYG3JVC0plD15GxVbfdhLy2WLA&usqp=CAU" width="120px">
+        <p>Reliable delivery service ensures timely arrival, with tracking options for peace of mind and efficient customer support assistance</p>
+     </div>
+     <div class="mybox">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOEtEhn3f_NnPtWUFJY_Yu1lCUtOrXcuoeIQ&usqp=CAU" width="120px">
+<p> Efficiently pack items in sturdy boxes with protective padding, ensuring safe transport and customer satisfaction with every delivery.</p>
+     </div>
     </div>
+    <div class="e" id="chef">
+        <h3 class="f">What we serve</h3>
+        <h2>Our Awesome Chefs</h2>
+    </div>
+    <div class="g">
+        <div class="h">
+<img src="https://kdmy9h.csb.app/chef3.jpg" width="100px">
+<h1 class="i">Angela</h1> </div>
+<div class="h">
+    <img src="https://kdmy9h.csb.app/chef3.jpg" width="100px">
+    <h1 class="i">Vantalakka</h1></div>
+    <div class="h">
+        <img src="https://kdmy9h.csb.app/chef3.jpg" width="100px">
+        <h1 class="i">Appalamma</h1>
+        </div>
+    </div>
+    <div class="j" id="contact">
+<h3>HAVE ANY QUESTIONS</h3>
+<h2>CONTACT US</h2>
+<form>
+    <input class="k" type="text" placeholder="enter your name"> <br><br>
+    <input class="k" type="email" placeholder="enter your email id"> <br><br>
+    <input class="k" type="number" placeholder="enter your number" > <br><br>
+    <input class="k" type="text" placeholder="enter your message here"> <br><br>
+<button class="sendbutton">Send</button>
+</form> </div>
+<div class="l">
+<div class="m"><h3>Created by k.Jayanth Reddy<br>Thankyou</h3></div>
+</div>
 </body>
 </html>
